--- a/lyricsflip_mini/package.json
+++ b/lyricsflip_mini/package.json
@@ -11,15 +11,24 @@
   "dependencies": {
     "@coinbase/onchainkit": "latest",
     "@farcaster/frame-sdk": "^0.1.8",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5",
     "@upstash/redis": "^1.34.4",
+    "class-variance-authority": "^0.7.1",
+    "immer": "^10.1.1",
+    "lucide-react": "^0.541.0",
     "next": "^15.3.3",
     "react": "^18",
     "react-dom": "^18",
-    "@tanstack/react-query": "^5",
+    "react-icons": "^5.5.0",
+    "tw-animate-css": "^1.3.7",
     "viem": "^2.27.2",
-    "wagmi": "^2.16.0"
+    "wagmi": "^2.16.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -29,9 +38,9 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "prettier": "^3.5.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
