--- a/lyricsflip_mini/tsconfig.json
+++ b/lyricsflip_mini/tsconfig.json
@@ -21,10 +21,13 @@
         "name": "next"
       }
     ],
-    "paths": {
-      "@/*": [
-        "./*"
-      ]
+     "baseUrl": ".",
+     "paths": {
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@styles/*": ["src/styles/*"],
+      "@utils/*": ["src/utils/*"],
+      "@lib/*": ["src/lib/*"]
     },
     "target": "ES2017"
   },
